# Python

./: README.md  complete-openai-api-reference.txt  delete-fonts.py  fix-opal-v3.py  openai-python-api.txt  summary.md  test.md
01 - Learning/: Cheat Sheet.md
02 - Playground/: data.txt
03 - Apps/MP3 Transcriber/: mp3-transcriber.py
03 - Projects/BackuPy/: README.md
03 - Projects/Vipyr/: README.md
03 - Projects/py-net/: README.md  py-net.py
AI Generated/: OpenAI-API-Reference.txt
AI Generated/API/: mp3-transcriber.py
AI Generated/API/Transcriber/: OpenAISermonTranscriber.py
AI Generated/Chatbot API/: pyproject.toml
AI Generated/File Commander/: pyproject.toml
AI Generated/File Commander/file_commander/: file-commander.py
AI Generated/Sample Code/: for-loop.py  if-elif-else.py
AI Generated/Scripts/chatbot/: chatbot.py
AI Generated/Scripts/weather_app/: knowledge.md  weather_app.py
AI-Generated/Network-tool/: network-tool.py
AI-Generated/mp3-transcriber/: README.md  mp3-transcriber.py
Apps/File Commander/: file-commander.py
Apps/QR Code Generator/: make-qr-code.py
BackuPy/: README.md
ChatGPT/o1-preview/: file-commander.py
Hacking/: Cheat Sheet.md
Learning/: 1. Python Basics.md  Learning Path.txt
My Code/: playground.py  pyproject.toml
My-Code/: playground.py
Playground/: py.py
PyChat/: README.md  client.py  server.py
QR Code Generator/: make-qr-code.py
Scripts/: OpenAITranscriber.py
Scripts/OpenAI/Transcriber/: OpenAITranscriber.py  Sermon_Summary.py
Transcriber/: Sermon_Summary.py
_Learning/: Learning Path.md
(+9 files in other folders)
