[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Chatbot"
authors = ["DunamisMax <dunamismax@tutamail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.58.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
